--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp12e]
-platform = espressif8266
-board = esp12e
+[env:esp32]
+platform = espressif32
+board = esp32doit-devkit-v1
 framework = arduino
+monitor_speed = 115200
